--- a/css/chat.less
+++ b/css/chat.less
@@ -1,9 +1,15 @@
-.chat {
-  flex: 1;
-  padding-top: 10px;
-  overflow-y: scroll;
+.message {
+    margin-bottom: 0.5em;
+}
+
+.nick {
+    font-weight: bold;
 }
 
 .children {
   margin-left: 2em;
+}
+
+> .thread > .children > .thread {
+  margin-bottom: 2em;
 }
