--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,3 @@
-@import 'chat.less';
-
 body {
   overflow: hidden;
   margin: 0 0 0 0;
@@ -22,3 +20,12 @@ body {
   padding-right: 1em;
   z-index: 10;
 }
+
+.chat {
+  flex: 1;
+  padding-top: 10px;
+  overflow-y: scroll;
+
+  @import 'chat.less';
+}
+
