--- a/css/main.less
+++ b/css/main.less
@@ -22,10 +22,9 @@ body {
 }
 
 .chat {
-  flex: 1;
-  padding-top: 10px;
-  overflow-y: scroll;
-
   @import 'chat.less';
 }
 
+.nick {
+    font-weight: bold;
+}
