Add nick colors and emotes.

--- a/css/chat.less
+++ b/css/chat.less
@@ -12,6 +12,10 @@ padding-top: 10px;
     font-weight: bold;
 }
 
+.emote .nick::after {
+    content: ' ';
+}
+
 .children {
   margin-left: 2em;
 }
