--- a/css/chat.less
+++ b/css/chat.less
@@ -17,6 +17,20 @@ padding-top: 10px;
     font-weight: bold;
 }
 
+.followups {
+  .nick {
+    display: none;
+  }
+
+  .message {
+    margin-bottom: 0;
+  }
+
+  .emote .nick {
+    display: inline !important;
+  }
+}
+
 .emote .nick::after {
     content: ' ';
 }
