Add people/bot split and fold duplicate sessions

--- a/css/chat.less
+++ b/css/chat.less
@@ -25,11 +25,15 @@ padding-top: 10px;
   margin-left: 2em;
 }
 
-.user-list {
+.users {
     overflow-y: scroll;
     padding-left: 0.5em;
     padding-right: 0.5em;
     width: 220px;
+
+    h1 {
+      font-size: inherit;
+    }
 
     .nick {
         overflow: hidden;
