--- a/css/main.less
+++ b/css/main.less
@@ -4,7 +4,7 @@ body {
   padding: 0 0 0 0;
 }
 
-#app > div {
+#app > div > div {
   display: flex;
   flex-direction: column;
 
@@ -13,16 +13,16 @@ body {
   overflow: hidden;
 }
 
-.connection {
-  height: 2em;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  padding-left: 1em;
-  padding-right: 1em;
-  z-index: 10;
-}
-
-.chat {
+.chat-room {
   @import 'chat.less';
+
+  .connection {
+    height: 2em;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding-left: 1em;
+    padding-right: 1em;
+    z-index: 10;
+  }
 }
 
 .nick {
