--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,6 @@
 body {
   font-family: Droid Sans, sans-serif;
+  font-size: 12pt;
   overflow: hidden;
   margin: 0 0 0 0;
   padding: 0 0 0 0;
@@ -27,6 +28,7 @@ body {
 }
 
 .nick {
+  font-size: smaller;
   font-weight: bold;
   white-space: nowrap;
 }
