--- a/css/chat.less
+++ b/css/chat.less
@@ -28,6 +28,12 @@
 .message {
   margin-bottom: 0.75em;
   overflow-wrap: break-word;
+
+  time {
+    color: #999;
+    font-size: small;
+    margin-left: 0.5em;
+  }
 }
 
 .nick {
