--- a/css/main.less
+++ b/css/main.less
@@ -1,3 +1,6 @@
+@nick-horizontal-padding: 0.2rem;
+@nick-vertical-padding: 0.1rem;
+
 body {
   font-family: Droid Sans, sans-serif;
   font-size: 12pt;
@@ -19,16 +22,16 @@ body {
   @import 'chat.less';
 
   .connection {
-    height: 2em;
+    height: 2rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 1rem;
+    padding-right: 1rem;
     z-index: 10;
   }
 }
 
 .nick {
-  font-size: smaller;
-  font-weight: bold;
   white-space: nowrap;
+  border-radius: 0.3rem;
+  padding: @nick-vertical-padding @nick-horizontal-padding @nick-vertical-padding @nick-horizontal-padding;
 }
