--- a/css/chat.less
+++ b/css/chat.less
@@ -119,8 +119,8 @@
   }
 
   .user {
-    padding-bottom: @nick-vertical-padding+0.1rem;
-    padding-top: @nick-vertical-padding+0.1rem;
+    padding-bottom: @nick-vertical-padding;
+    padding-top: @nick-vertical-padding;
     overflow: hidden;
     text-overflow: ellipsis;
   }
