Vertically align emoji

--- a/css/emoji.less
+++ b/css/emoji.less
@@ -4,6 +4,7 @@
   display: inline-block;
   overflow: hidden;
   text-indent: 100%;
+  vertical-align: top;
   white-space: nowrap;
 
   // dimensions expressed in em, not rem, to match local font size
