Fix rounded corners in the user list

--- a/css/chat.less
+++ b/css/chat.less
@@ -122,11 +122,10 @@
     padding-bottom: @nick-vertical-padding;
     padding-top: @nick-vertical-padding;
     overflow: hidden;
-    text-overflow: ellipsis;
+    //text-overflow: ellipsis;
   }
 
   .nick {
     text-overflow: ellipsis;
-    width: 100%;
   }
 }
