Tweak line heights

--- a/css/chat.less
+++ b/css/chat.less
@@ -12,13 +12,13 @@
   overflow: hidden;
 
   .nick {
-    line-height: 1.2rem;
+    line-height: 1.2em;
     margin-right: @nick-horizontal-padding;
   }
 
   .content-and-time {
     flex: 1;
-    line-height: 1.2rem;
+    line-height: 1.2em;
     overflow-wrap: break-word;
   }
 
@@ -46,7 +46,7 @@
         @scale: 0.9;
         font-size: @scale*1rem;
         padding: @nick-vertical-padding @nick-horizontal-padding 0 @nick-horizontal-padding;
-        line-height: 1.2rem/@scale;
+        line-height: 1.2em/@scale;
         margin-bottom: -0.1rem;
       }
     }
