--- a/css/main.less
+++ b/css/main.less
@@ -2,11 +2,19 @@
 
 @base-font-size: 11pt;
 
-@sidebar-width: 15rem;
+@sidebar-width: 20rem;
 @topbar-height: 10rem;
 
 @nick-horizontal-padding: 0.3rem;
 @nick-vertical-padding: 0.2rem;
+
+@bg0: hsl(204, 24%, 96%);
+@bg1: hsl(204, 100%, 97%);
+@bg2: hsl(204, 100%, 99%);
+
+@fg0: hsl(204, 55%, 55%);
+@fg1: hsl(204, 82%, 33%);
+@fg2: hsl(204, 32%, 86%);
 
 body {
   font-family: 'Open Sans', sans-serif;
@@ -39,7 +47,7 @@ body {
 h1 {
   color: #999;
   font-variant: small-caps;
-  font-weight: medium;
+  font-weight: 400;
   font-size: larger;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
