--- a/css/chat.less
+++ b/css/chat.less
@@ -15,6 +15,7 @@ z-index: 5;
 
   background: @bg1;
   border-top: 0.5rem solid @fg0;
+  border-bottom: 1px solid #c5cbd0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   z-index: 10;
 
