Add ChatEntry mockup

--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,6 @@
 @import 'emoji';
 
+@main-font: 'Open Sans', sans-serif;
 @base-font-size: 11pt;
 
 @sidebar-width: 15rem;
@@ -17,7 +18,7 @@
 @fg2: hsl(204, 32%, 86%);
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: @main-font;
   font-size: @base-font-size;
   overflow: hidden;
   margin: 0 0 0 0;
