--- a/css/chat.less
+++ b/css/chat.less
@@ -1,3 +1,6 @@
+@thread-indent: 2rem;
+@message-spacing: 0.4rem;
+
 flex: 1;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 display: flex;
@@ -45,17 +48,17 @@ z-index: 5;
   overflow: hidden;
 }
 
+.nick {
+  line-height: 1.2em;
+  margin-right: @nick-horizontal-padding;
+}
+
 .message {
   display: flex;
   flex-flow: row nowrap;
   align-items: flex-start;
   overflow: hidden;
   padding-bottom: 1px; // to keep descenders in multiline messages from getting cut off
-
-  .nick {
-    line-height: 1.2em;
-    margin-right: @nick-horizontal-padding;
-  }
 
   .content-and-time {
     flex: 1;
@@ -92,21 +95,29 @@ z-index: 5;
 }
 
 .children {
-  padding-left: 2rem;
-  padding-top: 0.4rem;
-  padding-bottom: 0.4rem;
+  padding-left: @thread-indent;
+  padding-top: @message-spacing;
+  padding-bottom: @message-spacing;
 
   &.top {
     flex: 1;
     overflow-y: scroll;
     margin-left: 0;
-    padding: 0.5rem 0.5rem 0.5rem 0;
+    padding: 0.5rem 0 0 0;
     z-index: 1;
+
+    > .thread > {
+      margin-bottom: 0;
+
+      .children > .thread {
+        padding-right: 0.5rem;
+      }
+    }
   }
 }
 
 .thread {
-  margin-bottom: 0.4rem;
+  margin-bottom: @message-spacing;
 }
 
 // Ends of threads are complicated places. This is the only place we want to show timestamps,
@@ -115,14 +126,40 @@ z-index: 5;
   margin-bottom: 0;
 
   > .message {
-    margin-bottom: -0.4rem;
+    margin-bottom: -@message-spacing;
     time {
       display: inline;
     }
   }
 
   > .children {
-    margin-top: 0.4rem;
+    margin-top: @message-spacing;
+  }
+}
+
+.chat-entry {
+  @hpad: 0.5rem;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: top;
+  border-bottom: 3px solid fade(green, 50%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-top: @message-spacing;
+  padding: @nick-vertical-padding 0 @nick-vertical-padding @thread-indent;
+  line-height: 1.6em;
+
+  .nick {
+    flex: 0;
+  }
+
+  textarea {
+    flex: 1;
+    border: none;
+    resize: none;
+    font-family: @main-font;
+    font-size: @base-font-size;
+    height: 1.6em;
+    padding: 0 0 0 0;
   }
 }
 
