--- a/css/chat.less
+++ b/css/chat.less
@@ -160,6 +160,13 @@ z-index: 5;
     font-size: @base-font-size;
     height: 1.6em;
     padding: 0 0 0 0;
+
+    &:focus {
+      border: none;
+      background-color: transparent;
+      resize: none;
+      outline: none;
+    }
   }
 }
 
