Add ChatEntry resizing on multine input

--- a/css/chat.less
+++ b/css/chat.less
@@ -167,6 +167,11 @@ z-index: 5;
       resize: none;
       outline: none;
     }
+
+    &.measure {
+      position: absolute;
+      left: -9999px;
+    }
   }
 }
 
