--- a/css/chat.less
+++ b/css/chat.less
@@ -46,6 +46,8 @@ z-index: 5;
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .nick {
@@ -210,5 +212,63 @@ z-index: 5;
   .nick {
     text-overflow: ellipsis;
     font-size: 0.8em;
+  }
+}
+
+.auth {
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+
+  background: rgba(255, 255, 255, 0.9) data-uri('../res/hatching.svg');
+  background-repeat: repeat;
+  background-blend-mode: overlay;
+
+  .spacer {
+    flex: 1;
+  }
+
+  .room-name {
+    color: @fg1;
+    font-weight: 800;
+  }
+
+  form {
+    flex: 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+
+    background: white;
+    opacity: 1;
+
+    padding: 1rem 1rem 1rem 1rem;
+    border: 1px solid @fg2;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
+    div, input {
+      flex: 0 0 3rem;
+      display: block;
+      text-align: center;
+    }
+
+    input {
+      flex-basis: auto;
+      font-size: 1.5rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .failure {
+      flex: 0 0 3rem;
+      color: red;
+      font-weight: 600;
+    }
   }
 }
