--- a/css/main.less
+++ b/css/main.less
@@ -17,6 +17,10 @@
 @fg1: hsl(204, 82%, 33%);
 @fg2: hsl(204, 32%, 86%);
 
+.dropshadow() {
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+}
+
 body {
   font-family: @main-font;
   font-size: @base-font-size;
