--- a/css/main.less
+++ b/css/main.less
@@ -12,6 +12,8 @@
 @bg0: hsl(204, 24%, 96%);
 @bg1: hsl(204, 100%, 97%);
 @bg2: hsl(204, 100%, 99%);
+@bg3: hsl(204, 67%, 94%);
+@bg4: hsl(204, 57%, 91%);
 
 @fg0: hsl(204, 55%, 55%);
 @fg1: hsl(204, 82%, 33%);
