--- a/css/chat.less
+++ b/css/chat.less
@@ -148,6 +148,7 @@ z-index: 5;
   .content {
     display: inline-block;
     padding-top: @nick-vertical-padding;
+    padding-bottom: 1px;
   }
 
   &.emote {
