--- a/css/room-list.less
+++ b/css/room-list.less
@@ -3,7 +3,7 @@ background: @bg0;
 z-index: 1;
 
 .bar {
-  flex: 0 0 0.5rem;
+  flex: 0 0 @topborder-height;
   background-image: data-uri('../res/rainbowbar.svg');
   background-position: center center;
   background-size: 100% 100%;
