--- a/css/main.less
+++ b/css/main.less
@@ -3,8 +3,9 @@
 @main-font: 'Open Sans', sans-serif;
 @base-font-size: 11pt;
 
-@sidebar-width: 15rem;
-@topbar-height: 6rem;
+@sidebar-width: 240px;
+@topbar-height: 100px;
+@topborder-height: 8px;
 
 @nick-horizontal-padding: 0.3rem;
 @nick-vertical-padding: 0.2rem;
@@ -51,7 +52,7 @@ body {
 
 .nick {
   display: inline-block;
-  border-radius: 0.3rem;
+  border-radius: 3px;
   padding: @nick-vertical-padding @nick-horizontal-padding @nick-vertical-padding @nick-horizontal-padding;
   white-space: nowrap;
 }
@@ -61,14 +62,14 @@ h1 {
   font-variant: small-caps;
   font-weight: 400;
   font-size: larger;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 time {
   color: #999;
   font-size: small;
-  margin-left: 0.5rem;
+  margin-left: 0.5em;
 }
 
 .rooms {
