Add white-space: pre-wrap to content

--- a/css/chat.less
+++ b/css/chat.less
@@ -148,6 +148,7 @@ z-index: 5;
     display: inline-block;
     padding-top: @nick-vertical-padding;
     padding-bottom: 1pt; // to keep descenders in multiline messages from getting cut off
+    white-space: pre-wrap;
   }
 
   &.emote {
