--- a/css/chat.less
+++ b/css/chat.less
@@ -10,10 +10,10 @@ z-index: 5;
 
 .dropshadow();
 
-.connection {
+.room-header {
   .dropshadow();
 
-  flex: 0 0 @topbar-height;
+  flex: 0 0 @room-header-height;
   display: flex;
   flex-flow: row nowrap;
   align-items: stretch;
@@ -112,9 +112,6 @@ z-index: 5;
     &.activated .handle {
       transform: none;
     }
-  }
-
-  .connection-state {
   }
 }
 
