--- a/css/main.less
+++ b/css/main.less
@@ -4,7 +4,7 @@
 @base-font-size: 11pt;
 
 @sidebar-width: 240px;
-@topbar-height: 100px;
+@room-header-height: 100px;
 @topborder-height: 8px;
 
 @nick-horizontal-padding: 0.3rem;
