--- a/css/room-list.less
+++ b/css/room-list.less
@@ -8,7 +8,7 @@ z-index: 1;
   background-position: center center;
   background-size: 100% 100%;
   height: 0.5rem;
-  margin-bottom: @topbar-height+2.5rem; // TODO: log instead of padding
+  margin-bottom: @room-header-height+2.5rem; // TODO: log instead of padding
   z-index: 10;
 }
 
