--- a/css/main.less
+++ b/css/main.less
@@ -1,7 +1,7 @@
 @import 'emoji';
 
 @main-font: 'Open Sans', sans-serif;
-@base-font-size: 11pt;
+@base-font-size: 15px;
 
 @sidebar-width: 240px;
 @room-header-height: 100px;
