--- a/css/main.less
+++ b/css/main.less
@@ -1,14 +1,14 @@
 @import 'emoji';
 
 @main-font: 'Open Sans', sans-serif;
-@base-font-size: 11pt;
+@base-font-size: 15px;
 
 @sidebar-width: 240px;
 @room-header-height: 100px;
 @topborder-height: 8px;
 
-@nick-horizontal-padding: 0.3rem;
-@nick-vertical-padding: 0.2rem;
+@nick-horizontal-padding: 5px;
+@nick-vertical-padding: 3px;
 
 @bg0: hsl(204, 24%, 96%);
 @bg1: hsl(204, 100%, 97%);
