Highlight current room

--- a/css/main.less
+++ b/css/main.less
@@ -16,6 +16,8 @@
 @bg3: hsl(204, 67%, 94%);
 @bg4: hsl(204, 57%, 91%);
 
+@current-room-background: hsl(204, 22%, 81%);
+
 @fg0: hsl(204, 55%, 55%);
 @fg1: hsl(204, 82%, 33%);
 @fg2: hsl(204, 32%, 86%);
