--- a/css/room-list.less
+++ b/css/room-list.less
@@ -12,7 +12,7 @@ z-index: 1;
   z-index: 10;
 }
 
-.room-list, h1 {
+.room, h1 {
   padding-left: 2rem;
   padding-right: 2rem;
 }
@@ -26,6 +26,10 @@ time {
 
   .room {
     line-height: 1.8em;
+
+    &.current {
+      background: @current-room-background;
+    }
   }
 
   a {
