Round corners on current room

--- a/css/room-list.less
+++ b/css/room-list.less
@@ -26,9 +26,12 @@ time {
 
   .room {
     line-height: 1.8em;
+    margin-right: 0.5em;
 
     &.current {
       background: @current-room-background;
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
     }
   }
 
